Redesign settings modal & Improve the tasks widget & Display tasks completed in activity widget
